MDEV-28974: mariadb-backup --prepare fails

fil_name_process(): Upon processing a new file name for FILE_RENAME, rename
the tablespace in deferred_spaces.

recv_sys_t::parse(): Rearrange some code to slightly improve the locality
of reference. Invoke fil_name_process() with FILE_MODIFY, FILE_DELETE
or the new case FILE_RENAME, for the new file name of the file.

This should be a regression due to
commit 86dc7b4d4cfe15a2d37f8b5f60c4fce5dba9491d (MDEV-24626)
and it might also affect the crash recovery of DDL operations.